# QGRS-Rust

./: .gitignore  Cargo.toml  LICENSE  MEETING_SPEECH_JA.md  Method.cn.md  Method.md  README.md  RELEASE.md  WEEKLY_SUMMARY_JA.md  bedgraph.plan.md  big.txt  filtered.txt  g_runs.tsv  how.md  method.ja.md  plan.md  qgrs.cpp  方法.ja.md
.cargo/: config.toml
.github/: RELEASE.md  copilot-instructions.md
.github/prompts/: plan-realTimeProgress.prompt.md  plan.md
.github/workflows/: ci.yml  release.yml
benchmark/mmap/: aaa_chromosome-1-1.csv
benchmark/stream/: aaa_chromosome-1-1.csv  chromosome-1-1.csv
output/: chromosome-1-1.csv
scripts/: README.en.md  README.ja.md  README.md  compare_starts.py  diff_csv_sequences.py  inspect_stream_context.sh  map_stream_only_to_chunks.py  ncbi_region_split.py  print_candidate_contexts.sh  raw_diff_analyzer.py  run_raw_diff.sh  run_stream_rebuild_diff.sh  show_rawdiff_report_2.sh  stream_context_by_sequence.sh  trace_extractor.py  trace_summarize.sh
src/: config.rs  lib.rs  main.rs
src/qgrs/: chunks.rs  consolidation.rs  data.rs  export.rs  input.rs  loaders.rs  mod.rs  search.rs  stream.rs
src/qgrs/tests/: helpers.rs  integration_chunk.rs  integration_stream.rs  mod.rs  unit.rs
src/scanner/: mmap.rs  mod.rs  streaming.rs
tests/: mmap_vs_stream.rs
